--- a/src/app/components/top-menu/languages-modal/languages-modal.component.html
+++ b/src/app/components/top-menu/languages-modal/languages-modal.component.html
@@ -16,7 +16,8 @@
         <ion-input
           [value]="language"
           [id]="index"
-          (ionChange)="onLanguageChange($event.detail.value, id)"
+          (ionChange)="onLanguageChange($event.detail.value, index)"
+          (ionBlur)="applyLanguageChange()"
         ></ion-input>
         <ion-button
           slot="end"
@@ -42,8 +43,16 @@
         <ion-label position="floating">This is a folder</ion-label>
         <ion-checkbox [value]="isFolder" (ionChange)="onIsFolderChange($event.detail.value)"></ion-checkbox>
       </ion-item>-->
+      
 </ion-content>
 <ion-footer class="ion-no-border">
+  <ion-card *ngIf="getCompletion().length>0">
+    <ion-card-content>
+      <ion-list>
+        <ion-item button (click)="onNewLanguageChange(language);add();" *ngFor="let language of getCompletion(); let index = index">{{language}}</ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
   <ion-row>
     <ion-col>
       <ion-item>
@@ -78,3 +87,4 @@
           </ion-item>
     </ion-toolbar>-->
 </ion-footer>
+
