--- a/src/app/components/tree-view/new-trad-modal/new-trad-modal.component.html
+++ b/src/app/components/tree-view/new-trad-modal/new-trad-modal.component.html
@@ -32,7 +32,7 @@
       <ion-card-subtitle>Fill translations</ion-card-subtitle>
     </ion-card-header>
     <ion-card-content>
-      <app-trad-field *ngFor="let trad of tradGroup.tradList" [trad]="trad"></app-trad-field>
+      <app-trad-field *ngFor="let trad of tradGroup.tradList" [trad]="trad" [parent]="tradGroup"></app-trad-field>
       <ion-button (click)="presentLanguagesModal()" expand="block" fill="clear" shape="round" *ngIf="!isFolder">
         <ion-icon name="globe"></ion-icon> Add languages
       </ion-button>
