--- a/src/app/components/top-menu/translate-modal/translate-modal.component.html
+++ b/src/app/components/top-menu/translate-modal/translate-modal.component.html
@@ -11,28 +11,59 @@
 <ion-content fullscreen>
   <ion-card>
     <ion-card-header>
+      <ion-card-subtitle>Choose translator</ion-card-subtitle>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-select
+        [value]="translator.translator"
+        (ionChange)="translatorChanged($event.detail.value)"
+      >
+        <ion-select-option *ngFor="let t of translator.translators" [value]="t"
+          >{{ t }}
+        </ion-select-option>
+      </ion-select>
+    </ion-card-content>
+  </ion-card>
+  <ion-card>
+    <ion-card-header>
       <ion-card-subtitle>Choose languages</ion-card-subtitle>
     </ion-card-header>
     <ion-card-content>
-      <ion-button (click)="presentLanguagesModal()" expand="block" fill="clear" shape="round">
+      <ion-button
+        (click)="presentLanguagesModal()"
+        expand="block"
+        fill="clear"
+        shape="round"
+      >
         <ion-icon name="globe"></ion-icon> Add languages
       </ion-button>
-      <ion-item *ngIf="global.languages.length>0">
+      <ion-item *ngIf="global.languages.length > 0">
         <ion-label>From</ion-label>
-        <ion-select [value]="translator.mainLanguage" (ionChange)="mainLanguageSelectedChanged($event.detail.value)">
-          <ion-select-option *ngFor="let language of global.languages" [value]="language">{{language}}
+        <ion-select
+          [value]="translator.mainLanguage"
+          (ionChange)="mainLanguageSelectedChanged($event.detail.value)"
+        >
+          <ion-select-option
+            *ngFor="let language of global.languages"
+            [value]="language"
+            >{{ language }}
           </ion-select-option>
         </ion-select>
       </ion-item>
-      <ion-item *ngIf="global.languages.length>0">
+      <ion-item *ngIf="global.languages.length > 0">
         <ion-label>To</ion-label>
-        <ion-select multiple="true" [value]="translator.languages"
-          (ionChange)="languagesSelectedChanged($event.detail.value)">
-          <ion-select-option *ngFor="let language of languagesAvailable()" [value]="language">{{language}}
+        <ion-select
+          multiple="true"
+          [value]="translator.languages"
+          (ionChange)="languagesSelectedChanged($event.detail.value)"
+        >
+          <ion-select-option
+            *ngFor="let language of languagesAvailable()"
+            [value]="language"
+            >{{ language }}
           </ion-select-option>
         </ion-select>
       </ion-item>
-
     </ion-card-content>
   </ion-card>
   <ion-card>
@@ -42,23 +73,35 @@
     <ion-card-content>
       <ion-item>
         <ion-label>All unfilled</ion-label>
-        <ion-checkbox slot="end" [checked]="translator.unfilled" (ionChange)="unfilledChanged($event.detail.checked)">
+        <ion-checkbox
+          slot="end"
+          [checked]="translator.unfilled"
+          (ionChange)="unfilledChanged($event.detail.checked)"
+        >
         </ion-checkbox>
       </ion-item>
 
       <ion-item>
-        <ion-label>All unverified (Be careful, this can erase your translation)</ion-label>
-        <ion-checkbox slot="end" [checked]="translator.unverified"
-          (ionChange)="unverifiedChanged($event.detail.checked)"></ion-checkbox>
+        <ion-label
+          >All unverified (Be careful, this can erase your
+          translation)</ion-label
+        >
+        <ion-checkbox
+          slot="end"
+          [checked]="translator.unverified"
+          (ionChange)="unverifiedChanged($event.detail.checked)"
+        ></ion-checkbox>
       </ion-item>
     </ion-card-content>
   </ion-card>
   <ion-card>
     <ion-card-header>
-      <ion-card-subtitle>You will fill {{translator.getTrad()}} translations.</ion-card-subtitle>
+      <ion-card-subtitle
+        >You will fill
+        {{ translator.getTrad() }} translations.</ion-card-subtitle
+      >
     </ion-card-header>
   </ion-card>
-
 </ion-content>
 
 <ion-footer>
@@ -70,7 +113,12 @@
       </ion-button>
     </ion-buttons>
     <ion-buttons slot="primary">
-      <ion-button (click)="translate()" slot="primary" color="success" [disabled]="translator.getTrad() == 0">
+      <ion-button
+        (click)="translate()"
+        slot="primary"
+        color="success"
+        [disabled]="translator.getTrad() == 0"
+      >
         <ion-icon slot="start" name="checkmark"></ion-icon>
         Translate
       </ion-button>
